# iTime

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: ASSET_SOURCES.md  ITIME-REPAIR-TODO.md
scripts/: compare-visual.mjs  extract_ui_icons.py  package-release.ps1  visual-test.ps1  visual_harness.py
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity.rs  keyboard.rs  keystats.rs  lib.rs  main.rs  provider_activity.rs  reminders.rs  settings.rs
src-tauri/src/activity/: capture.rs  collector.rs  model.rs  storage.rs
src-tauri/src/icons/: cache.rs  commands.rs  extract.rs  identity.rs  known_apps.rs  mod.rs  queue.rs  request.rs
src-tauri/src/icons/extract/: pipeline.rs  windows_tests.rs
src-tauri/src/icons/extract/windows/: gdi.rs  handles.rs  mod.rs  shell.rs  shortcuts.rs
src-tauri/src/keystats/: model.rs
src/components/: AgentMetricCard.vue  AiActivityTimeline.test.ts  AiActivityTimeline.vue  AiAgentSurface.test.ts  AiDetailDrawer.vue  AppIcon.test.ts  AppIcon.vue  AppMark.test.ts  AppMark.vue  ApplicationIcon.vue  BarChart.vue  CloseDialog.vue  FocusHeatmap.vue  HomeTimelineBands.test.ts  HomeTimelineBands.vue  MetricCard.vue  PageHeader.vue  ProviderActivityIcon.vue  SparkLine.test.ts  SparkLine.vue  TimelineLane.vue  UiIcon.vue  ai-detail-drawer.css  homeTimelineBands.ts
src/data/: appIconAssets.ts  focusHeatmap.test.ts  focusHeatmap.ts  mockEvents.ts  scenarioFixtures.ts  uiIcons.ts  visualCatalog.ts
src/domain/: appIdentity.ts  (+11 more)
website/: DEPLOY.md  README.md  _headers  index.html  main.js  styles.css
(+71 files in other folders)
