[package]
name = "itime"
version = "0.1.0"
description = "A local-first screen time and AI work prototype"
authors = ["iTime"]
edition = "2021"

[lib]
name = "itime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"

