[package]
name = "itime"
version = "0.1.0"
description = "A local-first screen time and AI work prototype"
authors = ["iTime"]
edition = "2021"

[lib]
name = "itime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-single-instance = "2"
sha2 = "0.10"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-notification = "2.3.3"
chrono = { version = "0.4.45", default-features = false, features = ["std", "clock"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Com",
  "Win32_Storage_FileSystem",
  "Win32_Storage_Packaging_Appx",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
] }
